2008-06-01  Simon Schmeisser  <mail_to_wrt@gmx.de>

    * src/lib/geoshape/GeoShape.cpp:
    - looks like I have to tell it explicitly to load the generic shape properties.
    - so now geoshapes are loaded again correctly

2008-06-01  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/plugins/marble/compass/CompassFloatItem.h:
    * src/plugins/marble/compass/CompassFloatItem.cpp:

    - Fix valgrind error: Conditional jump or move depends on uninitialised
      value(s) in CompassFloatItem::needsUpdate.
    - Use Q_DISABLE_COPY.
    - Add api doc for m_polarity.

2008-06-01  Inge Wallin  <inge@lysator.liu.se>

	Fix paintBase and setActiveArea for the Mercator projection.
	* src/lib/Projections/MercatorProjectionHelper.cpp (paintBase):
	Make it look like Equirect...:paintBase
	(setActiveRegion): same here
	* src/lib/Projections/EquirectProjectionHelper.cpp (paintBase): 
	Fix comments 
	
	Fix issue with paintBase
	* src/lib/Projections/EquirectProjectionHelper.cpp (paintBase):
	Bound the top and bottom values of the rectangle.

2008-06-01  Torsten Rahn  <rahn@kde.org> 

    * src/lib/TextureTile.cpp:
    * src/lib/TileLoader.cpp:

    - Taking cache contents into account when creating fallback
      tiles: preparation for threaded loading

2008-06-01  Inge Wallin  <inge@lysator.liu.se>

	Fix some issues with the active area in the image.
	* src/lib/Projections/EquirectProjectionHelper.cpp (setActiveRegion):
	Bound the active area to the viewport.

	* src/lib/Projections/SphericalProjectionHelper.cpp (setActiveRegion):
	Comment the code better and use mapCoversViewport()

2008-05-31  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/kml
    * src/lib/kml/KMLDocumentParser.cpp
    * src/lib/kml/KMLContainerParser.cpp
    * src/lib/kml/KMLFeature.h
    * src/lib/kml/KMLStyle.cpp
    * src/lib/kml/KMLPlaceMark.h
    * src/lib/kml/KMLColorStyle.h
    * src/lib/kml/KMLLabelStyle.h
    * src/lib/kml/KMLObject.cpp
    * src/lib/kml/KMLStyleSelector.h